# OOP-labs

lab 5/task 1/: lab5.cpp
lab 5/task 2/: CMakeLists.txt
lab 5/task 2/include/: ArithmeticExpression.h  Helpers.h  IComparer.h  Loader.h  Matrix.h  MatrixException.h  Node.h  VectorAnalog.h
lab 5/task 2/include/Comparers/: DiagonalProductComparer.h  DiagonalProductThenNextComparer.h
lab 5/task 2/src/: ArithmeticExpression.cpp  Helpers.cpp  Loader.cpp  Matrix.cpp  Node.cpp  VectorAnalog.cpp  main.cpp
lab 5/task 2/src/Comparers/: DiagonalProductComparer.cpp  DiagonalProductThenNextComparer.cpp
lab2/: lab2.cpp
lab3/task1/: lab3.cpp
lab3/task2/: lab3+.cpp
lab4/task1/: lab4.cpp
lab4/task2/: lab4_2.cpp  lab4_2.h
lab6/: Program.cs
